After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668573 - Fix rendering of the handle in panel applet frame widget
Fix rendering of the handle in panel applet frame widget
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: panel
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-24 13:10 UTC by Peter Hurley
Modified: 2012-03-02 15:26 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
git patch 1/2 (1.66 KB, patch)
2012-01-24 13:10 UTC, Peter Hurley
committed Details | Review
git patch 2/2 (2.25 KB, patch)
2012-01-24 13:10 UTC, Peter Hurley
committed Details | Review
After patch - handle rendered in correct location with correct background (37.75 KB, image/png)
2012-02-02 19:26 UTC, Peter Hurley
  Details
Fixes regression introduced by patch 2/2 above (1.59 KB, patch)
2012-03-02 15:08 UTC, Peter Hurley
committed Details | Review

Description Peter Hurley 2012-01-24 13:10:24 UTC
Created attachment 205973 [details] [review]
git patch 1/2

Attached git patches fix the rendering of the handle in the panel applet frame widget.

NB - Although patches are against branch 3.2, they should apply cleanly to git master.
Comment 1 Peter Hurley 2012-01-24 13:10:58 UTC
Created attachment 205974 [details] [review]
git patch 2/2
Comment 2 Vincent Untz 2012-02-02 09:38:46 UTC
Hrm, could you attach before/after screenshots? I'm not sure which theme you're using, but it doesn't make any difference here with Adwaita (where the handle is really just not painted at all, afaict).
Comment 3 Peter Hurley 2012-02-02 19:03:54 UTC
(In reply to comment #2)
> Hrm, could you attach before/after screenshots?

Sure.

> I'm not sure which theme you're
> using, but it doesn't make any difference here with Adwaita (where the handle
> is really just not painted at all, afaict).

Probably bugs in theme/engine. I use Radiance (with the unico engine), and had to fix bugs in both wrt gnome-panel.

First, Radiance uses a "border-width: 1" for everything, so things that don't draw frames (like PanelApplet and PanelAppletFrame) show a box artifact because on background wiping the fill is reduced by the border amount (same as stock engine).

Second, the unico engine uses the border-width as the line width for stroking the handle and separator -- which is bad when the "border-width: 0".

Third, css styling was wrong for the showdesktop-button so the background was being wiped to the default button style (thus no 'transparent' effect).
Comment 4 Peter Hurley 2012-02-02 19:26:06 UTC
Created attachment 206658 [details]
After patch - handle rendered in correct location with correct background

Cropped screenshot of handle rendered after patches applied (+ bug fixes to theme and engine)
Comment 5 Peter Hurley 2012-03-01 15:25:37 UTC
What's the situation with these patches? Is more information required here to push these into master?
Comment 6 Peter Hurley 2012-03-02 15:08:01 UTC
Created attachment 208854 [details] [review]
Fixes regression introduced by patch 2/2 above

This additional patch fixes a regression introduced by the git patch 2/2 submitted earlier. Please let me know if a single squashed patch is preferable.

The regression occurred when the system theme used a gradient background image. In this case, a background pattern exists but the pattern matrix needs to remain the identity matrix.
Comment 7 Vincent Untz 2012-03-02 15:26:22 UTC
I've squashed the patches in a single patch, and pushed, thanks!