panel: Fix rendering of the handle in the applet frame widget

We were not drawing the handle with the right rectangle.

We also need to re-scale the background pattern to the rendering
rectangle.

https://bugzilla.gnome.org/show_bug.cgi?id=668573